Add AntiBrowserOcclusion by pretending to have a MultitaskingViewFrame thumbnail window open all the time. Browser window still can't be minimized, but switching desktops etc. does not stop a playing video. See https://chromium.googlesource.com/chromium/src/+/refs/heads/main/ui/aura/native_window_occlusion_tracker_win.cc

--- a/src/OnTopReplica/OnTopReplica.csproj
+++ b/src/OnTopReplica/OnTopReplica.csproj
@@ -617,6 +617,12 @@
       <FileType>Satellite</FileType>
     </PublishFile>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OnTopReplica.AntiBrowserOcclusion\OnTopReplica.AntiBrowserOcclusion.csproj">
+      <Project>{314e4ef9-b9df-45ad-817a-351555cdee96}</Project>
+      <Name>OnTopReplica.AntiBrowserOcclusion</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
