--- a/src/OnTopReplica/OnTopReplica.csproj
+++ b/src/OnTopReplica/OnTopReplica.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OnTopReplica</RootNamespace>
     <AssemblyName>OnTopReplica</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ApplicationIcon>new-flat-icon.ico</ApplicationIcon>
     <IsWebBootstrapper>false</IsWebBootstrapper>
@@ -616,6 +616,12 @@
       <IncludeHash>True</IncludeHash>
       <FileType>Satellite</FileType>
     </PublishFile>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OnTopReplica.AntiBrowserOcclusion\OnTopReplica.AntiBrowserOcclusion.csproj">
+      <Project>{314e4ef9-b9df-45ad-817a-351555cdee96}</Project>
+      <Name>OnTopReplica.AntiBrowserOcclusion</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
